style.css
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500&display=swap");
*,
*::after,
*::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --step--2: clamp(1.09rem, 0.76rem + 1.63vw, 1.92rem);
  --step--1: clamp(1.3rem, 0.87rem + 2.14vw, 2.4rem);
  --step-0: clamp(1.56rem, 1rem + 2.8vw, 3rem);
  --step-1: clamp(1.88rem, 1.14rem + 3.66vw, 3.75rem);
  --step-2: clamp(2.25rem, 1.3rem + 4.76vw, 4.69rem);
  --step-3: clamp(2.7rem, 1.47rem + 6.16vw, 5.86rem);
  --step-4: clamp(3.24rem, 1.65rem + 7.97vw, 7.32rem);
  --step-5: clamp(3.89rem, 1.83rem + 10.28vw, 9.15rem);
}

body {
  display: grid;
  place-content: center;
  height: 100vh;
  text-align: center;
  font-family: "Open Sans", sans-serif;
  position: relative;
}
button {
  color: white;
  background-color: #222;
  font-weight: 600;
  font-size: 0.7rem;
  border: none;
  padding: 5px 20px;
  border-radius: 4px;
  border-top: 1px solid #222;
  box-shadow: inset 0 0 25px #333, 0 1px 0 #000, 0 2px 0 #222, 0 2px 3px #333;
  text-shadow: 0px -1px 0px #000;
  cursor: pointer;
}
button:active {
  transform: translateY(1.5px);
  box-shadow: inset 0 -0.5px 0 #aaaaaa, inset 0px -1px 1px -1px #fff,
    0px 0.5px 0.75px 0px #999;
}

.container {
  width: clamp(16rem, 90vw, 75rem);
  margin-inline: auto;
  text-align: center;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}
.show {
  visibility: visible !important;
  opacity: 1 !important;
}
.fade-out--wrong:active,
.fade-out--correct:active {
  transform: none !important;
  box-shadow: none !important;
}
.fade-out--correct,
.fade-out--wrong {
  cursor: default !important;
  color: gray !important;
  box-shadow: none !important;
}
.fade-out--wrong {
  background-color: red !important;
}
.fade-out--correct {
  background-color: green !important;
}
.underline {
  height: 2px;
  width: clamp(15px, 3vmin, 25px);
  background-color: black;
}

.display {
  width: min(500px, 100%);
  height: min(350px, 60vw);
  background-color: gray;
  text-align: left;
  margin: auto;
  position: relative;
  border-radius: 5px;
  padding: 5px;
  margin-bottom: 5px;
}
.hangman {
  position: absolute;
  top: 0;
  height: 100%;
  width: 100%;
}
.hangman > * {
  position: absolute;
  background-color: #fff;
  opacity: 0;
}
.ground {
  bottom: 10px;
  height: 1px;
  width: 50%;
}
.pole-h {
  bottom: 10px;
  left: 30px;
  height: 80%;
  width: 2px;
}
.pole-v {
  top: 20%;
  left: 30px;
  height: 2px;
  width: 30%;
}
.rope {
  width: 1px;
  height: 15%;
  left: calc(21% + clamp(1.8rem, 4vw, 2.8rem));
  top: 20%;
}
.head {
  height: min(35px, 6vmin);
  width: min(35px, 6vmin);
  border: 2px solid white;
  border-radius: 50%;
  background-color: transparent;
  top: 35%;
  left: calc(18% + clamp(1.8rem, 4vw, 2.8rem) + -2px);
}
.torso {
  width: 2px;
  height: 7vmin;
  left: calc(21% + clamp(1.8rem, 4vw, 2.8rem));
  top: 45%;
}
.left-arm {
  height: 2px;
  width: 8%;
  left: calc(14% + clamp(1.8rem, 4vw, 2.8rem) + 1px);
  top: 51%;
  transform: rotate(-45deg);
}
.right-arm {
  height: 2px;
  width: 8%;
  left: calc(20% + clamp(1.8rem, 4vw, 2.8rem) + 1px);
  top: 51%;
  transform: rotate(45deg);
}
.left-leg {
  height: 2px;
  width: 8%;
  left: calc(16% + clamp(1.8rem, 4vw, 2.8rem) + 1px);
  top: calc(52% + 6vmin);
  transform: rotate(-75deg);
}
.right-leg {
  height: 2px;
  width: 8%;
  left: calc(18% + clamp(1.8rem, 4vw, 2.8rem) + 1px);
  top: calc(52% + 6vmin);
  transform: rotate(75deg);
}
.lives {
  display: flex;
  gap: 5px;
}
i {
  color: red;
}
.hint {
  position: absolute;
  bottom: 0;
  width: 100%;
  text-align: center;
}
.hint p {
  font-size: 0.8rem;
  font-weight: 600;
}
.trade-modal {
  height: 100%;
  width: 100%;
  display: grid;
  place-content: center;
  position: absolute;
  background-color: rgba(0, 0, 0, 0.95);
  color: #fff;
  z-index: 10;
  opacity: 0;
  visibility: hidden;
}
.trade-modal h2 {
  margin-bottom: 15px;
}
.trade-modal .buttons {
  display: flex;
  gap: 20px;
  justify-content: center;
}

.answer {
  display: flex;
  align-items: end;
  gap: 5px;
  font-size: var(--step-0);
  height: 40px;
  margin-block: 20px;
  color: #000;
}

.correct-char {
  line-height: 0.7;
}
.chars {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  max-width: 500px;
  gap: 10px;
}
.char {
  width: 40px;
  height: 40px;
  color: white;
  background-color: #222;

  border-radius: 4px;
  border-top: 1px solid #222;
  box-shadow: inset 0 0 25px #333, 0 1px 0 #000, 0 2px 0 #222, 0 2px 3px #333;
  text-shadow: 0px -1px 0px #000;
  display: grid;
  place-content: center;
  cursor: pointer;
  transition: transform 0.08s ease, background-color 0.08s ease,
    box-shadow 0.08s ease;
}
.char:active {
  transform: translateY(1.5px);
  box-shadow: inset 0 -0.5px 0 #aaaaaa, inset 0px -1px 1px -1px #fff,
    0px 0.5px 0.75px 0px #999;
}

